# Fate-from-Chinese-Calendar

./: .gitattributes  .gitignore  README.md  pyproject.toml
test/: DateTimeTest.py  TimeUtilTest.py
time_lib/: Bazi.py  DateTime.py  TimeUtil.py  de430t.bsp  finals2000A.all
