[tool.poetry]
name = "fate"
version = "0.1.0"
description = "Fate from Chinese Calendar"
authors = ["simon852688@gmail.com"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11"
astropy = ">=7.0.1,<8.0.0"
jplephem = ">=2.22,<3.0"
skyfield = ">=1.53,<2.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "liberfa"
url = "https://pypi.anaconda.org/liberfa/simple"

[[tool.poetry.source]]
name = "tuna"
url = "https://mirrors.aliyun.com/pypi/simple/"
